<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/second_id"
    android:background="#58ACFA">

    <Button android:id="@id/button1"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_marginTop="41dp" android:text="@string/it"
        android:layout_below="@id/textView1"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        style="?android:attr/borderlessButtonStyle"/>
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="86dp"
        android:text="@string/qsn"
        android:textStyle="bold"
        android:typeface="sans"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button android:id="@id/button3"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cse"
        android:layout_below="@id/button1"
        android:layout_alignLeft="@id/button1"
        android:layout_alignStart="@id/button1"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignRight="@id/button1"
        android:layout_alignEnd="@id/button1"
        style="?android:attr/borderlessButtonStyle"/>
    <Button android:id="@id/button2"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/eee"
        android:layout_below="@id/button3"
        android:layout_alignLeft="@id/button3"
        android:layout_alignStart="@id/button3"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignRight="@id/button3"
        android:layout_alignEnd="@id/button3"
        style="?android:attr/borderlessButtonStyle"/>
    <Button android:id="@id/button4"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mech"
        android:layout_below="@id/button2"
        android:layout_alignLeft="@id/button2"
        android:layout_alignStart="@id/button2"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignRight="@id/button2"
        android:layout_alignEnd="@id/button2"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>